test/cases/compile_errors/atomic_orderings_of_atomicStore_Acquire_or_AcqRel.zig
export fn entry() void {
    var x: u32 = 0;
    @atomicStore(u32, &x, 1, .acquire);
}

// error
// backend=stage2
// target=native
//
// :3:31: error: @atomicStore atomic ordering must not be acquire or acq_rel
